--- a/pages/html/list.html
+++ b/pages/html/list.html
@@ -3,8 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="../../favicon.ico" type="image/png">
-	<title>Video List</title>
-	<meta name="description" content="Wrapper: Online's Video List">
+	<title>Wrapper Online Home</title>
+	<meta name="description" content="Wrapper Online is the Website edition to Wrapper offline | Legacy video maker for the GoAnimate community! Discord server: Https://discord.gg/goanimate">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Wrapper Online Home" />
+	<meta property="og:description" content="Wrapper Online is the Website edition to Wrapper offline | Legacy video maker for the GoAnimate community! Discord server: Https://discord.gg/goanimate" />
+	<meta property="og:url" content="https://wrapper.online/" />
+	<meta property="og:image:secure_url" content="favicon.ico" /> 
+	<meta property="og:image:" content="favicon.ico" /> 
+	<meta name="theme-color" content="#FF0080">
+	<link rel="stylesheet" type="text/css" href="../css/modern-normalize.css">
+	<link rel="stylesheet" type="text/css" href="../css/global.css">
+	<link rel="stylesheet" type="text/css" href="../css/list.css">
 	<link rel="stylesheet" type="text/css" href="../css/modern-normalize.css">
 	<link rel="stylesheet" type="text/css" href="../css/global.css">
 	<link rel="stylesheet" type="text/css" href="../css/list.css">
